--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,13 @@
 .app {
-  padding: 10px 20px;
+  padding: 5px 10px;
 }
 
 .app h3 {
   font-weight: normal;
   font-size: 24px;
+  margin-top: 18px;
+  margin-bottom: 18px;
+  text-align: center;
 }
 
 .app .input, .app .readout, .app button{
@@ -13,8 +16,13 @@
   vertical-align: middle;
   padding: 13px;
   background-color: #ddd;
-  height: 57px;
+  height: 65px;
   display: inline-block;
   min-width: 57px;
   border: none;
+}
+
+button:focus {
+  outline-width: 0;
+  box-shadow: 0 0 4px blue;
 }
