--- a/src/Flight.css
+++ b/src/Flight.css
@@ -1,5 +1,5 @@
 .decimal-input .readout {
-  width: calc(100% - 74px);
+  width: calc(100% - 68px);
 }
 
 .decimal-input .buttons {
@@ -7,8 +7,8 @@
   display: grid;
   grid-template-columns: auto auto auto;
   grid-template-rows: auto auto auto auto;
-  grid-column-gap: 10px;
-  grid-row-gap: 10px;
+  grid-column-gap: 4px;
+  grid-row-gap: 4px;
 }
 
 .next-button, .back-button {
@@ -17,14 +17,53 @@
 }
 
 .back-button {
-  left: 20px;
+  left: 10px;
 }
 
 .next-button {
-  right: 20px;
+  right: 10px;
 }
 
 .clear {
   width: 64px;
-  margin-left: 10px;
+  margin-left: 4px;
+}
+
+.time-input {
+  height: 55vh;
+  max-height: 360px;
+  width: 100%;
+  max-width: 280px;
+  margin: 0 auto;
+  display: grid;
+  grid-template-columns: auto 20px auto;
+  grid-template-rows: auto 100px auto;
+  font-size: 80px;
+  align-items: center;
+  text-align: center;
+
+}
+
+.time-input button {
+  height: 100%;
+}
+
+button.save-time-button {
+  display: block;
+  margin: 80px auto 0 auto;
+  width: 80vw;
+  height: 80vw;
+  max-width: 60vh;
+  max-height: 60vh;
+  border-radius: 40vw;
+}
+
+dl {
+  text-align: center;
+}
+
+dl dd {
+  padding: 0;
+  margin: 0 0 10px 0;
+  font-size: 30px;
 }
