--- a/src/index.css
+++ b/src/index.css
@@ -6,9 +6,17 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background-color: #3d3d3d
+  background-color: #3d3d3d;
 }
 
 *, *:before, *:after {
   box-sizing: border-box;
+}
+
+#root {
+  position: absolute;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
 }
