--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,26 @@
 .app {
-  padding: 20px 20px 80px 20px;
+  padding: 20px 20px 0 20px;
   color: white;
   height: 100%;
+  display: grid;
+  grid-template-rows: 80px 1fr 80px;
+  align-items: center;
+}
+
+.app .time-input,
+.app .time-now,
+.app .hobbs-input {
+  grid-row: 2
 }
 
 .app h3 {
   font-weight: normal;
-  font-size: 24px;
-  margin-top: 18px;
-  margin-bottom: 18px;
+  font-size: 20px;
+  letter-spacing: 10px;
+  padding: 20px 10px 0 16px;
+  margin: 0;
   text-align: center;
+  text-transform: uppercase;
 }
 
 .app .input, .app .readout, .app button {
@@ -22,6 +33,29 @@
   display: inline-block;
   min-width: 57px;
   border: none;
+}
+
+.app header {
+  position: relative;
+}
+
+.app .header-image {
+  position: absolute;
+  left: 50%;
+  top: 40px;
+  opacity: 0.1;
+}
+
+.app .header-image.motor {
+  margin-top: -47px;
+  margin-left: -41px;
+  transform: scale(1.3);
+}
+
+.app .header-image.wheels {
+  margin-top: -62px;
+  margin-left: -48px;
+  transform: scale(1.8);
 }
 
 .app button {
@@ -39,6 +73,7 @@
   display: grid;
   grid-template-rows: 65px auto;
   height: 100%;
+  max-height: 500px;
   row-gap: 20px;
 }
 
@@ -86,6 +121,17 @@ button.disabled {
     rgba(255,255,255,0.15) 8px,
     rgba(255,255,255,0.15) 16px
   );
+}
+
+button.back.disabled {
+  background-image: repeating-linear-gradient(
+    45deg,
+    rgba(255,255,255,0),
+    rgba(255,255,255,0) 8px,
+    rgba(255,255,255,0.15) 8px,
+    rgba(255,255,255,0.15) 16px
+  );
+
 }
 
 .highlight .border-svg path {
@@ -151,7 +197,9 @@ input:focus+.border-svg path {
 .time-input {
   display: grid;
   max-width: 270px;
+  width: 100%;
   height: 100%;
+  max-height: 450px;
   margin: 0 auto;
   grid-template-columns: 1fr 10px 1fr;
   grid-template-rows: 1fr 60px 1fr;
@@ -242,3 +290,46 @@ input:focus+.border-svg path {
 .number-input input:focus {
   outline: none;
 }
+
+.report {
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-rows: 1fr 3fr 1fr 3fr 1fr 3fr 1fr 3fr;
+  grid-column-gap: 10px;
+  height: 100%;
+  max-height: 400px;
+  width: 100%;
+  margin: 0 auto;
+}
+
+.report dt {
+  padding-top: 3px;
+  border-top: 1px solid #aaa;
+  color: #aaa;
+}
+
+.report dd {
+  padding: 0;
+  margin: 0;
+  font-size: 36px;
+}
+
+
+.report .conclusion {
+  grid-column-start: 1;
+  grid-column-end: 3;
+}
+
+.report dd.conclusion {
+  padding-bottom: 50px;
+}
+
+.report dt:nth-of-type(1) { grid-column: 1; grid-row: 1; }
+.report dt:nth-of-type(2) { grid-column: 2; grid-row: 1; }
+.report dd:nth-of-type(1) { grid-column: 1; grid-row: 2; }
+.report dd:nth-of-type(2) { grid-column: 2; grid-row: 2; }
+
+.report dt:nth-of-type(4) { grid-column: 1; grid-row: 5; }
+.report dt:nth-of-type(5) { grid-column: 2; grid-row: 5; }
+.report dd:nth-of-type(4) { grid-column: 1; grid-row: 6; }
+.report dd:nth-of-type(5) { grid-column: 2; grid-row: 6; }
