--- a/src/App.css
+++ b/src/App.css
@@ -2,22 +2,49 @@
   padding: 20px 20px 0 20px;
   color: white;
   height: 100%;
+  max-width: 600px;
+  margin: 0 auto;
+  position: relative;
   display: grid;
-  grid-template-rows: 80px 1fr 80px;
+  grid-template-rows: 60px 1fr 80px;
+  justify-items: center;
   align-items: center;
 }
 
-.app .time-input,
-.app .time-now,
-.app .hobbs-input {
-  grid-row: 2
+.app main {
+  grid-row: 2;
+  max-width: 600px;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  max-height: 500px;
 }
+
+.app main>* {
+  opacity: 1;
+  z-index: 2;
+  transition: opacity 0.25s ease 0.25s, transform 0.25s ease 0.25s;
+  position: absolute;
+  left: 0;
+  right: 0;
+  top: 0;
+  bottom: 0;
+  transform: translateY(0px);
+}
+
+.app main>.inactive {
+  opacity: 0;
+  z-index: 1;
+  transform: translateY(100px);
+  transition: opacity 0.25s ease, transform 0.25s ease;
+}
+
 
 .app h3 {
   font-weight: normal;
   font-size: 20px;
   letter-spacing: 10px;
-  padding: 20px 10px 0 16px;
+  padding: 10px 10px 0 16px;
   margin: 0;
   text-align: center;
   text-transform: uppercase;
@@ -42,20 +69,20 @@
 .app .header-image {
   position: absolute;
   left: 50%;
-  top: 40px;
+  top: 30px;
   opacity: 0.1;
 }
 
 .app .header-image.motor {
   margin-top: -47px;
   margin-left: -41px;
-  transform: scale(1.3);
+  transform: scale(1.1);
 }
 
 .app .header-image.wheels {
   margin-top: -62px;
   margin-left: -48px;
-  transform: scale(1.8);
+  transform: scale(1.6);
 }
 
 .app button {
@@ -89,7 +116,7 @@
 
 .digits button {
   font-size: 36px;
-  padding: 12px 10px 14px 16px;
+  padding: 10px 10px 16px 16px;
 }
 
 .border-svg {
@@ -104,6 +131,7 @@
 
 .border-svg path {
   stroke: white;
+  stroke-width: 1px;
   opacity: 0.3;
   fill: transparent;
 }
@@ -152,6 +180,7 @@ input:focus+.border-svg path {
   left: -1px;
   right: -1px;
   bottom: -1px;
+  z-index: 5;
 }
 
 .app footer button {
@@ -191,7 +220,7 @@ input:focus+.border-svg path {
   display: block;
   font-size: 80px;
   line-height: 70px;
-  margin-top: 10px;
+  margin-bottom: 5px;
 }
 
 .time-input {
@@ -220,11 +249,12 @@ input:focus+.border-svg path {
 }
 
 .time-component {
-  padding-top: 3px;
+  line-height: 52px;
 }
 
 .time-colon {
-  bottom: 5px;
+  bottom: 8px;
+  right: 2.5px;
 }
 
 .number-input {
@@ -238,15 +268,15 @@ input:focus+.border-svg path {
 
 .number-input input {
   height: 100%;
-  width: calc(100% + 1px);
+  width: calc(100% + 2px);
   font: inherit;
   color: inherit;
   vertical-align: middle;
-  font-size: 30px;
+  font-size: 28px;
   background-color: transparent;
   border: none;
   text-align: right;
-  padding: 15px 20px;
+  padding: 12px 20px 17px 20px;
   position: relative;
   z-index: 2;
 }
@@ -312,6 +342,7 @@ input:focus+.border-svg path {
   padding: 0;
   margin: 0;
   font-size: 36px;
+  line-height: 30px;
 }
 
 
@@ -333,3 +364,25 @@ input:focus+.border-svg path {
 .report dt:nth-of-type(5) { grid-column: 2; grid-row: 5; }
 .report dd:nth-of-type(4) { grid-column: 1; grid-row: 6; }
 .report dd:nth-of-type(5) { grid-column: 2; grid-row: 6; }
+
+
+
+
+
+.page-enter {
+  opacity: 0.01;
+}
+
+.page-enter.page-enter-active {
+  opacity: 1;
+  transition: opacity 500ms ease-in;
+}
+
+.page-leave {
+  opacity: 1;
+}
+
+.page-leave.page-leave-active {
+  opacity: 0.01;
+  transition: opacity 300ms ease-in;
+}
