--- a/src/index.css
+++ b/src/index.css
@@ -1,7 +1,20 @@
+@font-face {
+  font-family: 'din_alternatebold';
+  src: url('din_alternate_bold-webfont.woff2') format('woff2'),
+       url('din_alternate_bold-webfont.woff') format('woff');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+html {
+  touch-action: manipulation;
+}
+
 body {
   margin: 0;
   padding: 0;
-  font-family: "DIN Alternate", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+  font-family: "din_alternatebold", "DIN Alternate", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
